[project]
name = "codefest-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.90",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.7",
]
